Remove `white-space: nowrap` from example sentence to prevent sentence from cutting off It is no longer needed to keep the sentence to a single line since it is hidden under the details tag so it will not cause visual shifts on the gloss due to the sentence length

--- a/crop_theft_vocab/styling.css
+++ b/crop_theft_vocab/styling.css
@@ -13,7 +13,6 @@
 #example_sentence {
   width: 100%;
   overflow: hidden;
-  white-space: nowrap;
 }
 
 #definition {
